# wfcrai-context-agent

./: .gitignore  README.md  constants.py  dockerfile  main.py  makefile  person_context.sql  pyproject.toml  test.py
.github/workflows/: build-and-push.yaml
agent/: context_agent.py
agent/nodes/: confluence_context.py  org_context.py
config/: shared.toml
schemas/: context_agent_schema.py  models.py
tests/: sample_payload.json
tools/: bq_utils.py  gemini_utils.py
