[project]
name = "wfcrai-context-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-cloud-alloydb>=0.4.5",
    "google-cloud-alloydb-connector[pg8000]>=1.7.0",
    "google-cloud-bigquery>=3.31.0",
    "langfuse>=2.60.2",
    "langgraph>=0.3.21",
    "toml>=0.10.2",
    "openai>=1.65.0",
    "google-cloud-storage>=2.18.0,<3.0.0",
    "uvicorn>=0.34.0",
    "google-adk>=0.4.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
    "wfcrai-agent-utils==0.0.3",
    "google-genai>=1.13.0",
]

[[tool.uv.index]]
url = "https://us-central1-python.pkg.dev/gcp-wow-food-wfc-ai-dev/wfcrai-agent-utils/simple/"

